# linguist_ai

./: .claudeignore  .gitignore  BACKEND_AUDIT.md  FRONTEND_HANDOVER.md  PLAN.md  PRD-LanguageLearningApp-2026-06-23.md  tasks_1.json  tasks_2.json
back/: .env  linguist_ai.db  pyproject.toml  tasks_fixing.json  tasks_phase_1.json  tasks_phase_2.json  tasks_phase_3.json  test_all_services.py  test_api.py  test_audit_fixes.py  test_full_real_interaction.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_real_vertex.py  test_realtime_stream.py  test_speaking.py  test_vertex_tts.py  test_whisper_benchmark.py  test_ws.py
back/app/: main.py
back/app/core/: config.py  database.py  exceptions.py  level_thresholds.json  logging.py  middleware.py
back/app/models/: __init__.py  achievement.py  enums.py  speaking_scenario.py  user.py  user_achievement.py  user_listening_attempt.py  user_profile.py  user_quota.py  user_vocabulary.py  vocabulary.py  writing_exam.py
back/app/repositories/: achievement_repository.py  language_repository.py  listening_exam_repository.py  mission_repository.py  profile_repository.py  tutor_message_repository.py  user_error_repository.py  user_quota_repository.py  user_repository.py  user_vocabulary_repository.py  vocabulary_repository.py  weekly_report_repository.py  writing_exam_repository.py
back/app/schemas/: language.py  lesson.py  listening_exam.py  mission.py  quota.py  spaced_repetition.py  tutor.py  user.py  user_error.py  vocabulary.py  weekly_report.py  writing_exam.py
back/linguist_ai_back.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+212 files in other folders)
